<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:layout_gravity="center"
    android:background="#262626"
    tools:context=".RecoverPasswordActivity">

    <TextView

        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot" />

    <TextView

        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_margin="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_forget" />

    <EditText
        android:focusable="true"
        android:paddingStart="10dp"
        android:layout_margin="20dp"
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/hint_mail"
        android:layoutDirection="rtl"
        android:inputType="textEmailAddress"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/rounded_border_edittext"
        />

    <Button
        android:onClick="forget"
        android:background="@drawable/btn_click_theme"
        android:id="@+id/button"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="60dp"
        android:text="@string/title_forgot"/>

</LinearLayout>